// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should render 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm dnkyDE border-theme-neutral-300 dark:border-theme-neutral-800"
    type="horizontal"
  />
</DocumentFragment>
`;

exports[`Divider should render a dashed 1`] = `
<div>
  <div
    class="sc-AxjAm iUsVaG border-theme-neutral-300 dark:border-theme-neutral-800"
    type="horizontal"
  />
</div>
`;

exports[`Divider should render horizontal type 1`] = `
<div>
  <div
    class="sc-AxjAm dnkyDE border-theme-neutral-300 dark:border-theme-neutral-800"
    type="horizontal"
  />
</div>
`;

exports[`Divider should render vertical type 1`] = `
<div>
  <div
    class="sc-AxjAm gHUxAL border-theme-neutral-300 dark:border-theme-neutral-800"
    type="vertical"
  />
</div>
`;

exports[`Divider should render vertical type and large 1`] = `
<div>
  <div
    class="sc-AxjAm kDIOvA border-theme-neutral-300 dark:border-theme-neutral-800"
    type="vertical"
  />
</div>
`;

exports[`Divider should render vertical type and small 1`] = `
<div>
  <div
    class="sc-AxjAm cExLXd border-theme-neutral-300 dark:border-theme-neutral-800"
    type="vertical"
  />
</div>
`;
